# Heron-Protobuf

./: BUILD.bazel  README.md  WORKSPACE  go_deps.bzl
proto/: BUILD.bazel
proto/api/: BUILD.bazel
proto/ckptmgr/: BUILD.bazel  ckptmgr.proto
proto/scheduler/: BUILD.bazel  scheduler.proto
proto/stmgr/: BUILD.bazel  stmgr.proto
proto/system/: BUILD.bazel  metrics.proto  physical_plan.proto  tuple.proto
proto/testing/: BUILD.bazel
proto/tmanager/: BUILD.bazel  tmanager.proto
rules/: BUILD.bazel
src/: BUILD
toolchain/: BUILD.bazel
