## Core ##
# gazelle:proto_rule proto_compile implementation stackb:rules_proto:proto_compile

## C++ ##
# gazelle:proto_plugin cpp implementation builtin:cpp
# gazelle:proto_plugin protoc-gen-grpc-cpp implementation grpc:grpc:cpp
# gazelle:proto_rule proto_cc_library implementation stackb:rules_proto:proto_cc_library
# gazelle:proto_rule proto_cc_library deps @com_google_protobuf//:protobuf
# gazelle:proto_rule proto_cc_library visibility //visibility:public
# gazelle:proto_rule grpc_cc_library implementation stackb:rules_proto:grpc_cc_library
# gazelle:proto_rule grpc_cc_library deps @com_github_grpc_grpc//:grpc++
# gazelle:proto_rule grpc_cc_library deps @com_github_grpc_grpc//:grpc++_reflection
# gazelle:proto_rule grpc_cc_library visibility //visibility:public
# gazelle:proto_language cpp plugin cpp
# gazelle:proto_language cpp plugin protoc-gen-grpc-cpp
# gazelle:proto_language cpp rule proto_compile
# gazelle:proto_language cpp rule proto_cc_library
# gazelle:proto_language cpp rule grpc_cc_library

## Java ##
# gazelle:proto_plugin java implementation builtin:java
# gazelle:proto_plugin protoc-gen-grpc-java implementation grpc:grpc-java:protoc-gen-grpc-java
# gazelle:proto_rule proto_java_library implementation stackb:rules_proto:proto_java_library
# gazelle:proto_rule proto_java_library deps @com_google_protobuf//:protobuf_java
# gazelle:proto_rule proto_java_library visibility //visibility:public
# gazelle:proto_rule grpc_java_library implementation stackb:rules_proto:grpc_java_library
# gazelle:proto_rule grpc_java_library deps @build_stack_rules_proto//plugin/grpc/grpc-java:grpc_java
# gazelle:proto_rule grpc_java_library visibility //visibility:public
# gazelle:proto_language java plugin java
# gazelle:proto_language java plugin protoc-gen-grpc-java
# gazelle:proto_language java rule proto_compile
# gazelle:proto_language java rule proto_java_library
# gazelle:proto_language java rule grpc_java_library

## Python ##
# gazelle:proto_plugin python implementation builtin:python
# gazelle:proto_plugin protoc-gen-grpc-python implementation grpc:grpc:protoc-gen-grpc-python
# gazelle:proto_rule proto_python_library implementation stackb:rules_proto:proto_py_library
# gazelle:proto_rule proto_python_library deps @com_google_protobuf//:protobuf_python
# gazelle:proto_rule proto_python_library visibility //visibility:public
# gazelle:proto_rule grpc_py_library implementation stackb:rules_proto:grpc_py_library
# TODO: add grpc_py_library deps
# gazelle:proto_rule grpc_py_library visibility //visibility:public
# gazelle:proto_language python plugin python
# gazelle:proto_language python plugin protoc-gen-grpc-python
# gazelle:proto_language python rule proto_compile
# gazelle:proto_language python rule proto_python_library
# gazelle:proto_language python rule grpc_py_library
