load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/java:proto_java_library.bzl", "proto_java_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "heron_proto_api_proto",
    srcs = ["topology.proto"],
    visibility = ["//visibility:public"],
)

proto_cc_library(
    name = "heron_proto_api_cc_library",
    srcs = ["topology.pb.cc"],
    hdrs = ["topology.pb.h"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf"],
)

proto_compile(
    name = "heron_proto_api_cpp_compile",
    outputs = [
        "topology.pb.cc",
        "topology.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "heron_proto_api_proto",
)

proto_compile(
    name = "heron_proto_api_java_compile",
    outs = {"@build_stack_rules_proto//plugin/builtin:java": "proto/api/heron_proto_api.srcjar"},
    outputs = ["heron_proto_api.srcjar"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:java"],
    proto = "heron_proto_api_proto",
)

proto_java_library(
    name = "heron_proto_api_java_library",
    srcs = ["heron_proto_api.srcjar"],
    visibility = ["//visibility:public"],
    exports = ["@com_google_protobuf//:protobuf_java"],
    deps = ["@com_google_protobuf//:protobuf_java"],
)

proto_compile(
    name = "heron_proto_api_python_compile",
    outputs = ["topology_pb2.py"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:python"],
    proto = "heron_proto_api_proto",
)

proto_py_library(
    name = "heron_proto_api_py_library",
    srcs = ["topology_pb2.py"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf_python"],
)
