load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/java:proto_java_library.bzl", "proto_java_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "heron_proto_scheduler_proto",
    srcs = ["scheduler.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/system:heron_proto_system_proto"],
)

proto_cc_library(
    name = "heron_proto_scheduler_cc_library",
    srcs = ["scheduler.pb.cc"],
    hdrs = ["scheduler.pb.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/system:heron_proto_system_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "heron_proto_scheduler_cpp_compile",
    outputs = [
        "scheduler.pb.cc",
        "scheduler.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "heron_proto_scheduler_proto",
)

proto_compile(
    name = "heron_proto_scheduler_java_compile",
    outs = {"@build_stack_rules_proto//plugin/builtin:java": "proto/scheduler/heron_proto_scheduler.srcjar"},
    outputs = ["heron_proto_scheduler.srcjar"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:java"],
    proto = "heron_proto_scheduler_proto",
)

proto_java_library(
    name = "heron_proto_scheduler_java_library",
    srcs = ["heron_proto_scheduler.srcjar"],
    visibility = ["//visibility:public"],
    exports = [
        "//proto/system:heron_proto_system_java_library",
        "@com_google_protobuf//:protobuf_java",
    ],
    deps = [
        "//proto/system:heron_proto_system_java_library",
        "@com_google_protobuf//:protobuf_java",
    ],
)

proto_compile(
    name = "heron_proto_scheduler_python_compile",
    outputs = ["scheduler_pb2.py"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:python"],
    proto = "heron_proto_scheduler_proto",
)

proto_py_library(
    name = "heron_proto_scheduler_py_library",
    srcs = ["scheduler_pb2.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/system:heron_proto_system_py_library",
        "@com_google_protobuf//:protobuf_python",
    ],
)
