load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/java:proto_java_library.bzl", "proto_java_library")
load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "heron_proto_stmgr_proto",
    srcs = ["stmgr.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/system:heron_proto_system_proto"],
)

proto_cc_library(
    name = "heron_proto_stmgr_cc_library",
    srcs = ["stmgr.pb.cc"],
    hdrs = ["stmgr.pb.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/system:heron_proto_system_cc_library",
        "@com_google_protobuf//:protobuf",
    ],
)

proto_compile(
    name = "heron_proto_stmgr_cpp_compile",
    outputs = [
        "stmgr.pb.cc",
        "stmgr.pb.h",
    ],
    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
    proto = "heron_proto_stmgr_proto",
)

proto_compile(
    name = "heron_proto_stmgr_java_compile",
    outs = {"@build_stack_rules_proto//plugin/builtin:java": "proto/stmgr/heron_proto_stmgr.srcjar"},
    outputs = ["heron_proto_stmgr.srcjar"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:java"],
    proto = "heron_proto_stmgr_proto",
)

proto_java_library(
    name = "heron_proto_stmgr_java_library",
    srcs = ["heron_proto_stmgr.srcjar"],
    visibility = ["//visibility:public"],
    exports = [
        "//proto/system:heron_proto_system_java_library",
        "@com_google_protobuf//:protobuf_java",
    ],
    deps = [
        "//proto/system:heron_proto_system_java_library",
        "@com_google_protobuf//:protobuf_java",
    ],
)

proto_compile(
    name = "heron_proto_stmgr_python_compile",
    outputs = ["stmgr_pb2.py"],
    plugins = ["@build_stack_rules_proto//plugin/builtin:python"],
    proto = "heron_proto_stmgr_proto",
)

proto_py_library(
    name = "heron_proto_stmgr_py_library",
    srcs = ["stmgr_pb2.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/system:heron_proto_system_py_library",
        "@com_google_protobuf//:protobuf_python",
    ],
)
